# mcap_arrow

./: BUILD  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  build.sh  minimal_example  minimal_example.cc  run_tests.sh  simplified_test  test.mcap
src/examples/: mcap_arrow_example.cc  mcap_arrow_ipc_example.cc
src/lib/: BUILD  mcap_arrow_converter.cc  mcap_arrow_converter.h  mcap_arrow_index.cc  mcap_arrow_index.h  mcap_arrow_ipc.cc  mcap_arrow_ipc.h  mcap_arrow_reader.cc  mcap_arrow_reader.h  mcap_arrow_writer.cc  mcap_arrow_writer.h
src/proto/: BUILD  sensor_data.proto
src/test/: BUILD.bazel  basic_test.cc  ipc_simple_test.cc  mcap_arrow_coverage_test.cc  mcap_arrow_minimal_test.cc  mcap_arrow_test.cc  simple_test.cc
src/test/arrow/: BUILD.bazel  mcap_arrow_converter_test.cc  mcap_arrow_index_test.cc  mcap_arrow_ipc_basic_test.cc  mcap_arrow_ipc_test.cc  mcap_arrow_reader_test.cc  mcap_arrow_writer_test.cc
test/: BUILD.bazel  mcap_basic_test.cc  mcap_simple_test.cc  mcap_test.cc
